# EXOPLANETARIUM

./: LICENSE.txt  README.md  dependencias.yml  graficar_orbitas.py  main.ipynb  main.py  pyproject.toml  setup.py
